Issues: More information about rate and currency needed for each expense item list. && Check font icon is too big && Expenses - The markup isn´t correct

--- a/GlowExpense/app/styles/_main.scss
+++ b/GlowExpense/app/styles/_main.scss
@@ -107,6 +107,8 @@ a {
 }
 
 .reports-body .content-list {
+  float: left;
+  width: 100%;
   margin-bottom: 135px;
 }
 
